<resources>
    <string name="app_name">MyBudgetTrack</string>
    <!-- Logo description -->
    <string name="logo_description">App Logo</string>

    <!-- Username hint -->
    <string name="username_hint">Sila isi nama pengguna</string>

    <!-- Username hint -->
    <string name="email_hint">Sila isi emel anda</string>

    <!-- Password hint -->
    <string name="password_hint">Sila isi kata laluan anda</string>

    <!-- Login button label -->
    <string name="login_button_label">Login</string>
    <string name="daftar_button_label">Daftar</string>
    <string name="welcome_message">Welcome</string>

    <string name="buttonAkaun_description" />
    <string name="buttonBajet_description" />
    <string name="buttonBil_description" />
    <string name="buttonGraf_description" />

</resources>